# CEval

./: CEval.exe.manifest  CEval.pri  CEval.pro  CEval.rc  CMakeLists.txt  CuteEval.pro  README.md  cevalres.qrc  hyperbolefittingenginemsgs.h  resource.h
efgloader/: efgloader.pri  efgloader.pro
efgloader/backends/ASCSupport/: ASCSupport.pro  ascsupport.cpp  ascsupport.h  ascsupport_global.h  ascsupport_handlers.cpp  ascsupport_handlers.h  availablechannels.cpp  availablechannels.h  commonpropertiesdialog.cpp  commonpropertiesdialog.h  commonpropertiesdialog.ui  supportedencodings.cpp  supportedencodings.h
efgloader/backends/CSVSupport/: CSVSupport.pro  csvfileloader.cpp  csvfileloader.h  csvsupport.cpp  csvsupport.h  csvsupport_global.h  loadcsvfiledialog.h  loadcsvfiledialog.ui  malformedcsvfiledialog.cpp  malformedcsvfiledialog.ui
efgloader/backends/HPCSSupport/: HPCSSupport.pri  HPCSSupport.pro  chemstationbatchloader.cpp  chemstationbatchloader.h  chemstationfileinfomodel.h  chemstationfileloader.cpp  chemstationfileloader.h  hpcssupport.cpp  hpcssupport.h  hpcssupport_global.h  loadchemstationdatadialog.cpp  loadchemstationdatadialog.h
efgloader/backends/NetCDFSupport/: NetCDFSupport.pri  NetCDFSupport.pro  netcdffileloader.cpp  netcdffileloader.h  netcdfsupport.cpp  netcdfsupport.h
efgloader/core/: core.pro
efgloader/core/common/: backendhelpers_p.h  backendinterface.h  ipcinterface.h
efgloader/core/src/: dataloader.cpp  dataloader.h  dbusipcproxy.cpp  dbusipcproxy.h  ipcproxy.h  localsocketipcproxy.cpp  localsocketipcproxy.h  main.cpp
efgloader/efgloader-core/: efgloader-core.pro
efgloader/efgloader-core/common/: backendinterface.h  common.pro  ipcinterface.h  threadeddialog.h  uibackend.cpp  uibackend.h
efgloader/efgloader-core/src/: dataloader.cpp  dataloader.h  dbusipcproxy.cpp  dbusipcproxy.h  ipcproxy.cpp  localsocketconnectionhandler.cpp  localsocketconnectionhandler.h  localsocketipcproxy.cpp  localsocketipcproxy.h  main.cpp
main/: main.pri  main.pro
main/src/: cevalcrashhandler.h  comboboxmodel.h  commonparametersengine.h  commonparameterswidgetconnector.h  crashevent.h  crasheventcatcher.h  customlocalesortproxymodel.cpp  custommetatypes.cpp  custommetatypes.h  datahash.cpp  datahash.h  doubleclickableqwtplotzoomer.cpp  evalmainwindowconnector.cpp  evalmainwindowsoftwareupdaterconnector.cpp  evalserializable.cpp  evaluatedpeaksmodel.cpp  evaluationengine.cpp  evaluationengine.h  evaluationenginedataexporter.cpp  evaluationresultsitems.h  evaluationwidgetconnector.cpp  filescomboboxmodel.h  globals.cpp  hvlextrapolator.cpp  hvlextrapolator.h  hvllibwrapper.cpp  hyperbolafittingwidgetconnector.cpp  inumberformatchangeable.h  main.cpp  mappedvectorwrapper.h  peakcontext.cpp  peakevaluator.cpp  peakevaluator.h  plotcontext.cpp  plotcontextlimited.cpp  plotcontextlimited.h  plotcontexttypes.h  scrollareaeventfilter.h  serieproperties.cpp  snrcalculator.cpp  (+4 more)
res/: CEval.desktop
src/: abstractcrashhandler.cpp  abstractcrashhandler.h  abstractmappermodel.h  abstractpeakfinder.cpp  abstractpeakfinder.h  assistedpeakfinder.cpp  assistedpeakfinder.h  booleanmappermodel.h  cevalconfig.cpp  cevalconfig.h  cevalcrashhandler.cpp  cevalcrashhandler.h  chemstationbatchloader.cpp  chemstationbatchloader.h  chemstationbatchloadmodel.cpp  chemstationbatchloadmodel.h  chemstationfileinfomodel.cpp  chemstationfileinfomodel.h  chemstationfileloader.cpp  chemstationfileloader.h  commonparametersengine.cpp  commonparametersengine.h  commonparametersitems.h  commonparameterswidgetconnector.cpp  crashevent.cpp  crasheventcatcher.cpp  crasheventcatcher.h  crashhandler.cpp  crashhandler.h  crashhandlerprovider.cpp  crashhandlerprovider.h  crashhandlerwindows.cpp  crashhandlerwindows.h  csvfileloader.cpp  csvfileloader.h  customlocalesortproxymodel.cpp  customlocalesortproxymodel.h  custommetatypes.cpp  custommetatypes.h  dataaccumulator.cpp  (+113 more)
src/crashhandling/: crashhandlerbase.cpp  crashhandlerbase.h  crashhandlerfinalizer.h  crashhandlerlinux.cpp  crashhandlerlinux.h  crashhandlerlinux_stacktrace.cpp  crashhandlerlinux_stacktrace.h  crashhandlerwindows.cpp  crashhandlerwindows.h  crashhandlerwindows_stacktrace.h  crashhandlingprovider.h  nullcrashhandler.cpp  nullcrashhandler.h  rawmemblock.h
src/dataexporter/: dataexporter.cpp  dataexporter.h  exporter.cpp  exporter.h  exporterelems.cpp  exporterelems.h  exporterglobals.h  schemecreator.cpp  schemecreator.h  schemecreator.ui  schemeeditor.cpp  schemeeditor.h  schemeeditor.ui  schemeserializer.cpp  schemeserializer.h  schemesmanagerwidget.cpp  schemesmanagerwidget.h  schemesmanagerwidget.ui  selectschemewidget.cpp  selectschemewidget.h  selectschemewidget.ui
src/efg/: dbusclient.cpp  dbusclient.h  efgloaderinterface.cpp  efgloaderinterface.h  efgloaderwatcher.cpp  efgloaderwatcher.h  efgtypes.cpp  efgtypes.h  ipcclient.cpp  ipcclient.h  localsocketclient.cpp  localsocketclient.h
src/gui/: aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addpeakdialog.cpp  addpeakdialog.h  addpeakdialog.ui  adjustplotvisualsdialog.cpp  adjustplotvisualsdialog.h  adjustplotvisualsdialog.ui  appendoverwriteexportfilemessagebox.cpp  appendoverwriteexportfilemessagebox.h  autoupdatecheckdialog.cpp  autoupdatecheckdialog.h  autoupdatecheckdialog.ui  checkforupdatedialog.cpp  checkforupdatedialog.h  checkforupdatedialog.ui  commonparameterswidget.cpp  commonparameterswidget.h  commonparameterswidget.ui  crashhandlerdialog.cpp  crashhandlerdialog.h  crashhandlerdialog.ui  ediiconnectionfaileddialog.cpp  ediiconnectionfaileddialog.h  ediiconnectionfaileddialog.ui  ediinotfounddialog.cpp  ediinotfounddialog.h  ediinotfounddialog.ui  efgloadinfo.h  evalmainwindow.cpp  evalmainwindow.h  evalmainwindow.ui  evaluatedpeakswidget.cpp  evaluatedpeakswidget.h  evaluatedpeakswidget.ui  evaluationupperwidget.cpp  evaluationupperwidget.h  evaluationupperwidget.ui  evaluationwidget.cpp  (+66 more)
src/math/: extremesearching.cpp  extremesearching.h  functions.h  hvl.cpp  hvl.hpp  hvl_types.hpp  hvlestimate.cpp  hvlestimate.h  vhhvl.hpp
src/math/alglib/: ap.h  (+8 more)
(+196 files in other folders)
